# BFM-tools

./: .gitignore  CMakeLists.txt  README.md  bfm-tools.cpp  bfm-tools.sln  constant.h  data.cpp  data.h  random.cpp  random.h  vec3.h
bfm-tools/: bfm-ex.cpp  bfm-tools.vcxproj  bfm-tools.vcxproj.filters  bfm.cpp  bfm.h  constant.h  data.h  random.cpp  transform.h
cpp-tools/bfm-tools/: bfm-tools.cpp  bfm-tools.vcxproj  bfm-tools.vcxproj.filters  bfm.cpp  bfm.h  constant.h  data.cpp  data.h  random.cpp  random.h
example/: ex_gen_faces.cpp  example-inputs.txt  example_landmark_68.anl  write_avg_face.cpp
include/: bfm.h  bfm_manager.h  constant.h  data.h  data.hpp  random.hpp  transform.h  transform.hpp  type_utils.h  type_utils.hpp
src/: bfm.cpp  bfm_manager.cpp  transform.cpp
